filter courses for trainer

--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -19,38 +19,43 @@
 					id="courseList"
 					hflex="1"
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
-					class="listbox-300 mobile-inherit-width" >
+					class="listbox-400 mobile-inherit-width" >
 		        <auxhead>
 		            <auxheader class="header" colspan="4" >
 		            	<hlayout sclass="pull-left">	
+			            	<!-- Novy -->
 			            	<button onClick="@command('newItemCmd')" tooltiptext="${c:l('txt.ui.common.new')}" 
             					sclass="add-item-btn" 
             					iconSclass="z-icon-plus"
-            					style="margin-right: 35px;"
+            					style="margin-right: 10px;"
             					visible="@load(vm.isLoggedUserInRole('ADMIN'))" />
-			            					
-		            		<hbox if="${vm.showCourseFilter}" >
-			            		<label value="${c:l('txt.ui.common.courseLocation2')}:"/>
+			            	
+							<!-- Misto -->		
+		            		<hbox if="${vm.showCourseFilter}" style="margin-right: 10px;" >
+			            		<label value="${c:l('txt.ui.common.location')}:" class="hide-on-mobile-platform"/>
 								<listbox id="courseLocation" 
 									selectedItem="@bind(vm.courseLocationSelected)" 
+									tooltiptext="@load(vm.courseLocationSelected.name)"
 									model="@load(vm.courseLocationList)"
 									onSelect="@command('filterByCourseLocationCmd')"
 									mold="select"
 									style="margin-left: 5px;"
-									height="30px"
-									hflex="1" >
+									width="150px"
+									height="30px" >
 									<template name="model">
 						           		<listitem label="${each.name}" value="${each}" />
 									</template>
 								</listbox>
 		            		</hbox>
 		            		
+		            		<!-- Moje kurzy -->
+			            	<hlayout hflex="min" style="margin-right: 2px;">
+								<label value="${c:l('txt.ui.common.myCourses')}" />
+            					<checkbox checked="@bind(vm.myCourses)" onCheck="@command('filterByMyCoursesCmd')" />
+							</hlayout>
 		            	</hlayout>
-		            					
-	            		
-		            	<hlayout sclass="pull-right">		            		
-		            		
-		            		
+		            	
+		            	<hlayout sclass="pull-right">	
 		            		<!-- Rocnik -->
             				<include src="/pages/common/component/context-year.zul"/>
             				
