--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
@@ -44,7 +44,7 @@
 											emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 											class="listbox" >
 									        <auxhead>
-									            <auxheader class="header" colspan="${vm.isAttendanceForParentsVisible() ? 5 : 4}" >
+									            <auxheader class="header" colspan="${vm.isAttendanceForParentsVisible() ? 6 : 5}" >
 									            	<hbox hflex="1" height="42px" align="center" >
 										            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 									            			<hbox vflex="1" align="center">
@@ -65,6 +65,7 @@
 									            <listheader label="${c:l('txt.ui.common.name')}" sort="auto(name)" align="left" hflex="2" />
 									            <listheader label="${c:l('txt.ui.common.courseLocation2')}" sort="auto(description)" align="left" hflex="3" />
 									            <listheader label="${c:l('txt.ui.common.lessons')}" align="left" hflex="2" />
+									            <listheader label="${c:l('txt.ui.common.trainers')}" align="left" hflex="2" />
 <!-- 									            <listheader width="35px" /> -->
 									            <listheader width="60px" />
 									            <listheader hflex="min" if="${vm.isAttendanceForParentsVisible()}" />
@@ -75,8 +76,13 @@
 									                <listcell label="${item.name}" />
 									                <listcell label="${item.courseLocation.name}, ${item.courseLocation.description}" />
 									                <listcell>
-									                	<vbox vflex="1" align="center" forEach="${item.lessonList}" >
-									                		<label value="${vm.getLessonToUi(each)}"/>
+									                	<vbox vflex="1" align="left" forEach="${item.lessonList}" >
+									                		<label value="${vm.getLessonToUi(each)}" />
+														</vbox>
+									                </listcell>
+									                <listcell>
+									                	<vbox vflex="1" align="left" forEach="${item.trainerList}" >
+															<label value="${each.contact.completeName}" />
 														</vbox>
 									                </listcell>
 													<!-- Platba -->
