--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -61,10 +61,22 @@
             				
             				<!-- Zpravy -->
 		           			<send-mail-button buttonSclass="toolbar-btn" />
+            				
             				<button iconSclass="z-icon-download" 
-            					onClick="@command('exportToExcel',listbox=courseList)" 
-            					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
-            					sclass="toolbar-btn"/>
+	            					popup="downloadPopup, position=after_end"
+	            					tooltiptext="${c:l('txt.ui.common.downloadToFile')}" 
+	            					if="${vm.isLoggedUserInRole('ADMIN')}"
+	            					sclass="toolbar-btn"/>
+            				<menupopup id="downloadPopup" hflex="min" if="${vm.isLoggedUserInRole('ADMIN')}" >
+	            				<!-- Standardni export -->
+								<menuitem label="${c:l('txt.ui.export.Standard')} ${c:l('txt.ui.export.XLS')}" 
+									onClick="@command('exportToExcel',listbox=courseList)" />
+								<menuseparator/>
+								<!-- Kompletní informace vcetne seznamu ucastniku, lekci a treneru -->
+								<menuitem label="${c:l('txt.ui.export.CompletCourse')}" 
+									onClick="@command('exportCompleteCoursesToExcelCmd')" />
+					       	</menupopup>
+            				
            					<button iconSclass="z-icon-refresh" 
            						onClick="@command('refreshDataCmd')" 
            						tooltiptext="${c:l('txt.ui.common.refreshData')}" 
