--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/kurz.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/kurz.zul
@@ -64,8 +64,26 @@
 								<columns>
 					                <column align="left" hflex="1" />
 					            </columns>
-								<rows >
-									<row sclass="form-grid-row" style="border: none; padding: 10px 30px 0px 30px;" >
+								<rows>
+									<row sclass="form-grid-row" style="border: none; padding: 10px 30px 20px 30px;" >
+										<cell sclass="form-grid-cell" >
+											<vbox hflex="1">
+												<label value="${c:l('txt.ui.common.CourseType')}"/>
+												<hlayout>
+	                								<radiogroup model="@load(vm.courseTypeList)" 
+														selectedItem="@bind(fx.course.courseType)"
+														hflex="1">
+														<template name="model">
+															<radio label="@load(each) @converter(vm.enumLabelConverter)" 
+																value="${each}" 
+																tooltiptext="@load(vm.getCourseTypeDesc(each))" />
+														</template>
+													</radiogroup>
+												</hlayout>
+											</vbox>
+										</cell>
+									</row>
+									<row sclass="form-grid-row" style="border: none; padding: 0px 30px 0px 30px;" >
 										<cell sclass="form-grid-cell" >
 											<vbox hflex="1">
 												<label value="${c:l('txt.ui.common.name')}"/>
