--- a/scb-ui-zk/src/main/webapp/pages/common/component/course-selection-groupbox.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/course-selection-groupbox.zul
@@ -34,9 +34,9 @@
 					</cell>
 				</row>
 				<row visible="@load(!empty(vm.courseList))" >
-					<cell   if="${!vm.securedMode}" >
+					<cell if="${!vm.securedMode}" >
 						<vlayout hflex="1" sclass="listbox-wrapper">
-							<label value="${c:l('txt.ui.common.SelectCourse')}"/>
+							<label value="${c:l('txt.ui.common.SelectCourse')}" style="padding-bottom:10px;"/>
 							<!-- Verejna cast -->
 							<listbox model="@load(vm.courseList)" 
 								hflex="1"
