--- a/scb-ui-zk/src/main/webapp/pages/common/component/payment-instruction.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/payment-instruction.zul
@@ -1,4 +1,5 @@
 <zk>
+	<custom-attributes courseStandard="${arg.courseStandard}" />
 	<custom-attributes priceSemester1="${arg.priceSemester1}" />
 	<custom-attributes priceSemester2="${arg.priceSemester2}" />
 	<custom-attributes orgAccountNumber="${arg.orgAccountNumber}" />
@@ -6,7 +7,8 @@
 	<custom-attributes paymentVarSymbolSecondSemester="${arg.paymentVarSymbolSecondSemester}" />
 	
 	<vlayout width="440px">
-		<grid hflex="1">
+		<!-- TWO SEMESTER COURSE -->
+		<grid hflex="1" if="${!courseStandard}">
 			<auxhead>
 				<auxheader class="header" colspan="2" style="background: #99c6ef !important;" >
 					<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
@@ -16,22 +18,23 @@
 			</auxhead>
 			<columns>
 				<column width="120px" valign="top" />
-				<column align="left"/>
+				<column align="left" />
 			</columns>
 			<rows>
 				<row>
-					<label value="${c:l('txt.ui.common.Semester1')}" style="white-space: nowrap;" />
+					<label value="${c:l('txt.ui.common.Semester1')}" 
+						style="white-space: nowrap;" />
 					<cell>
 						<vlayout hflex="1">
-							<hlayout hflex="1">
+							<hlayout hflex="1" style="margin-bottom: 5px">
 								<label value="${c:l('txt.ui.common.AccountNo')}" hflex="2" />
 								<textbox readonly="true" hflex="3" style="margin-left: 5px;" value="${orgAccountNumber}" />
 							</hlayout>
-							<hlayout>
+							<hlayout style="margin-bottom: 5px">
 								<label value="${c:l('txt.ui.common.Amount')}" hflex="2" />
 								<textbox readonly="true" hflex="3" style="margin-left: 5px;" value="${priceSemester1} ${c:l('txt.ui.common.CZK')}" />
 							</hlayout>
-							<hlayout>
+							<hlayout style="margin-bottom: 5px">
 								<label value="${c:l('txt.ui.common.VarSymbol')}" hflex="2" />
 								<textbox readonly="true" hflex="3" style="margin-left: 5px;" value="${paymentVarSymbolFirstSemester}" />
 							</hlayout>
@@ -42,15 +45,15 @@
 					<label value="${c:l('txt.ui.common.Semester2')}" style="white-space: nowrap;" />
 					<cell>
 						<vlayout hflex="1">
-							<hlayout hflex="1">
+							<hlayout hflex="1" style="margin-bottom: 5px">
 								<label value="${c:l('txt.ui.common.AccountNo')}" hflex="2" />
 								<textbox readonly="true" hflex="3" style="margin-left: 5px;" value="${orgAccountNumber}" />
 							</hlayout>
-							<hlayout>
+							<hlayout style="margin-bottom: 5px">
 								<label value="${c:l('txt.ui.common.Amount')}" hflex="2" />
 								<textbox readonly="true" hflex="3" style="margin-left: 5px;" value="${priceSemester2} ${c:l('txt.ui.common.CZK')}" />
 							</hlayout>
-							<hlayout>
+							<hlayout style="margin-bottom: 5px">
 								<label value="${c:l('txt.ui.common.VarSymbol')}" hflex="2" />
 								<textbox readonly="true" hflex="3" style="margin-left: 5px;" value="${paymentVarSymbolSecondSemester}" />
 							</hlayout>
@@ -59,5 +62,40 @@
 				</row>
 			</rows>
 		</grid>
+		
+		<!-- STANDARD COURSE -->
+		<grid hflex="1" if="${courseStandard}">
+			<auxhead>
+				<auxheader class="header" style="background: #99c6ef !important;" >
+					<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+						<label value="${c:l('txt.ui.common.PaymentInstruction')}" />
+					</vbox>
+				</auxheader>
+			</auxhead>
+			<columns>
+				<column align="left" />
+			</columns>
+			<rows>
+				<row>
+					<cell>
+						<vlayout hflex="1">
+							<hlayout hflex="1" style="margin-bottom: 5px">
+								<label value="${c:l('txt.ui.common.AccountNo')}" hflex="2" />
+								<textbox readonly="true" hflex="3" style="margin-left: 5px;" value="${orgAccountNumber}" />
+							</hlayout>
+							<hlayout style="margin-bottom: 5px">
+								<label value="${c:l('txt.ui.common.Amount')}" hflex="2" />
+								<textbox readonly="true" hflex="3" style="margin-left: 5px;" value="${priceSemester1} ${c:l('txt.ui.common.CZK')}" />
+							</hlayout>
+							<hlayout style="margin-bottom: 5px">
+								<label value="${c:l('txt.ui.common.VarSymbol')}" hflex="2" />
+								<textbox readonly="true" hflex="3" style="margin-left: 5px;" value="${paymentVarSymbolFirstSemester}" />
+							</hlayout>
+						</vlayout>
+					</cell>
+				</row>
+			</rows>
+		</grid>
+		
    	</vlayout>
 </zk>
