--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/kurz.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/kurz.zul
@@ -17,7 +17,7 @@
 		
 		<!-- Popup s parametry pro kopirovani kurzu. -->
 		<popup id="courseCopyPopup" vflex="1" >
-			<course-copy-params />
+			<course-copy-params copyCmd="copyItemCmd" />
 		</popup>
 					
 		<vlayout>
