--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -14,7 +14,12 @@
 		
 		<!-- Popup s parametry pro kopirovani kurzu. -->
 		<popup id="courseCopyPopup" vflex="1" >
-			<course-copy-params />
+			<course-copy-params copyCmd="copyItemCmd" />
+		</popup>
+		
+		<!-- Popup s parametry pro kopirovani vice kurzu. -->
+		<popup id="courseListCopyPopup" vflex="1" >
+			<course-copy-params copyCmd="copyItemsCmd" />
 		</popup>
 		
 		<vlayout hflex="1" sclass="listbox-wrapper">
